--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -6,16 +6,17 @@ submenu: true
 ---
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
+![](/img/toplogo/3.6.jpg){:class="uk-align-left uk-width-1-2"}
 
 **HIGH SAFETY** предлагает широкий ассортимент анкерных столбов, используемых как в качестве самостоятельных анкерных точек, так и для монтажа на них горизонтальных анкерных линий.  
 По желанию заказчика возможно исполнение изделия с любым покрытием: горячее цинкование, гальваника, покраска эмалью, порошковая покраска. 
 
 Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}  
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
+###### отменяет действие align-left и align-right
 
-
-***ФОТО***  
-
+![](/img/sss/3.AP-2h.jpg){:class="uk-align-left uk-width-1-3"}
+### Анкерный столб, круглый (арт. AP-2h)
 Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка (входит в комплект поставки) для присоединения средств индивидуальной защиты от падения с высоты.  Для столба высотой 0,8 м - 1 м  дополнительно предусмотрены ребра жесткости в основании устройства.   
  
 #### Характеристики:    
@@ -23,11 +24,10 @@ submenu: true
 **Высота столба:** 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
+###### отменяет действие align-left и align-right
  
- 
- 
+![](/img/sss/3.AP-4h.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб, боковое крепление** (арт. AP-4h)  
-***ФОТО***
 
 Представляет собой анкерное устройство класса B и предназначен для монтажа охватом на несущие балки конструкции (например, подкровельные).       
 #### Характеристики:  
@@ -36,20 +36,20 @@ submenu: true
 **Количество пользователей:** 2  
 **Статическая прочность:** 24 кН  
 **Размер балки:** высота 120 - 780 мм, ширина - до 300 мм
+###### отменяет действие align-left и align-right
  
- 
+![](/img/sss/3.AP-8h.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб, многогранный** (арт. AP-8h)  
-***ФОТО***
 
 Представляет собой анкерное устройство класса А и предназначен для организации анкерной точки на элементах постоянных конструкций: стальных - установка при помощи болтовых элементов М12, бетонных - при помощи химических/механических анкеров. Монтаж на балки осуществляется при помощи ответной пластины и шпилек.       
 #### Характеристики:  
 **Материал:** нержавеющая сталь  
 **Количество пользователей:** 2  
 **Статическая прочность:** 24 кН  
+###### отменяет действие align-left и align-right
  
- 
+![](/img/sss/3.AP-T200.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб "ТИТАН 200"** (арт. AP-T200)  
-***ФОТО***
 
 Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.     
 #### Характеристики:  
@@ -57,10 +57,10 @@ submenu: true
 **Высота столба:** 2 м  
 **Количество пользователей:** 1  
 **Статическая прочность:** мин. 24 кН
+###### отменяет действие align-left и align-right
  
- 
+![](/img/sss/3.AP-T200b.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб "ТИТАН 200 b"** (арт. AP-T200b)
-***ФОТО***
 
 Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.       
 #### Характеристики:  
@@ -69,10 +69,10 @@ submenu: true
 **Высота столба:** 2 м  
 **Количество пользователей:** 1 (при использовании в комплекте для разъединителей с гибкой анкерной линией - 2)  
 **Статическая прочность:** мин. 24 кН
+###### отменяет действие align-left и align-right
  
- 
+![](/img/sss/3.AP-S200.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб AP-S200** (арт. AP-S200)
-***ФОТО***
 
 Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.      
 #### Характеристики:  
@@ -80,10 +80,10 @@ submenu: true
 **Высота столба:** 2 м  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
+###### отменяет действие align-left и align-right
  
- 
+![](/img/sss/3.AP-S200b.jpg){:class="uk-align-left uk-width-1-3"}  
 #### **Анкерный столб AP-S200b** (арт. AP-S200b)
-***ФОТО***
 
 Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.        
 #### Характеристики:  
@@ -91,16 +91,17 @@ submenu: true
 **Высота столба**: 2 м  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
+###### отменяет действие align-left и align-right
  
- 
+![](/img/sss/3.AP-R10.jpg){:class="uk-align-left uk-width-1-3"}  
 #### **Анкерный столб для кровли** (арт. AP-R10)
-***ФОТО***
 
 Представляет собой анкерное устройство класса A и предназначен для монтажа на мягкие кровли (сэндвич-панель, профлист и т.д.). Крепление к поверхности осуществляется при помощи саморезов.   
 #### Характеристики:  
 **Материал:** нержавеющая сталь  
 **Количество пользователей:** 2  
 **Статическая прочность:** мин. 24 кН  
+###### отменяет действие align-left и align-right
  
  
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
