--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -11,7 +11,7 @@ submenu: true
 **HIGH SAFETY** предлагает широкий ассортимент анкерных столбов, используемых как в качестве самостоятельных анкерных точек, так и для монтажа на них горизонтальных анкерных линий.  
 По желанию заказчика возможно исполнение изделия с любым покрытием: горячее цинкование, гальваника, покраска эмалью, порошковая покраска. 
 
-Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}  
+{% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия     
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
 ###### отменяет действие align-left и align-right
 
