--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -11,7 +11,7 @@ submenu: true
 
 Горизонтальная гибкая анкерная линия **PEREPRAVA** компании **HIGH SAFETY** - универсальное решение для организации безопасной работы на высоте на горизонтальных поверхностях (монтаж к стене или под потолок). Может быть установлена на любой высоте (фактор падения 0). Незаменима при организации страховочной системы на подкрановых путях. 
 
-Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}
+{% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
 ###### отменяет действие align-left и align-right 
 
@@ -33,59 +33,58 @@ submenu: true
 
 ### **Состав системы**
  
-#### Мобильная анкерная точка, нерж. сталь (FHL401)
-![](/img/sss/3.FHL401.gif){:class="uk-align-left uk-width-1-2"}
-![](/img/sss/3.FHL401.1.gif){:class="uk-align-left uk-width-1-2"}
+#### **Мобильная анкерная точка, нерж. сталь** (FHL401)
+![](/img/sss/3.FHL401.1.1.gif)
 ###### отменяет действие align-left и align-right
 Обеспечивает беспрепятственное прохождение промежуточных точек анкерной линии на любой высоте установки при факторе падения 0. Совместима с любыми типами СИЗ втягивающего типа.    
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
 
 ![](/img/sss/3.FHL402.gif){:class="uk-align-left uk-width-1-2"}
-#### Промежуточный структурный анкер, нерж. сталь (FHL402 )
+#### **Промежуточный структурный анкер, нерж. сталь** (FHL402)
 •  Возможность свободного перемещения по всей длине анкерной линии.  
 •  Дополнительная точка опоры.  
 •  Возможность установки на стенах зданий или под потолок.  
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
 
 ![](/img/sss/3.FHL403.gif){:class="uk-align-left uk-width-1-2"}
-#### Концевой структурный анкер 1-точечный, нерж. сталь (FHL403)
+#### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL403)
 Используется при установке линии на анкерные столбы.   
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
  
 ![](/img/sss/3.FHL404.gif){:class="uk-align-left uk-width-1-2"}
-#### Концевой структурный анкер 2-точечный, нерж. сталь (FHL404)
+#### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL404)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
  
 ![](/img/sss/3.FHL405.gif){:class="uk-align-left uk-width-1-2"}
-#### Амортизирующее устройство (FHL405)
+#### **Амортизирующее устройство** (FHL405)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
-Материал: нержавеющая сталь
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
   
 ![](/img/sss/3.FHL406.gif){:class="uk-align-left uk-width-1-2"}
-#### Натяжитель для троса (FHL406)
+#### **Натяжитель для троса** (FHL406)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
-Материал: нержавеющая сталь
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
  
 ![](/img/sss/3.FHL407.gif){:class="uk-align-left uk-width-1-2"}
-#### Промежуточный структурный анкер угловой (FHL407)
+#### **Промежуточный структурный анкер угловой** (FHL407)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
-Материал: нержавеющая сталь
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
    
 ![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-2"}
-#### Цанговый зажим (ZG002)
+#### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### отменяет действие align-left и align-right
  
 ![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-2"}
-#### Трос из нержавеющей стали (SSR001)
+#### **Трос из нержавеющей стали** (SSR001)
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### отменяет действие align-left и align-right
  
@@ -93,7 +92,7 @@ submenu: true
 Готовое решение предусматривает подробную инструкцию по сборке системы, комплект эксплуатационных документов и гарантийный талон на анкерную линию.
 
 
-#### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
+#### ***В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.***
 
 
 ### ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!
