--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -15,7 +15,7 @@ submenu: true
 
 Двухтросовая горизонтальная гибкая анкерная линия **GALEREYA** компании **HIGH SAFETY** служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов.   
 
-Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}    
+{% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия        
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России   
 
 ###### отменяет действие align-left и align-right
@@ -30,58 +30,52 @@ submenu: true
 
 #### **Состав системы**
 
-#### Мобильная анкерная точка (арт. FHL201) 
 ![](/img/sss/3.FHL201.gif){:class="uk-align-left uk-width-1-3"}
-Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии. Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
-Материал: нержавеющая сталь
-
+#### **Мобильная анкерная точка** (арт. FHL201) 
+Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии.  
+Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
-#### Амортизирующее устройство (арт. FHL205)  
 ![](/img/sss/3.FHL205.gif){:class="uk-align-left uk-width-1-3"}
-Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.  
-Материал: нержавеющая сталь
-
+#### **Амортизирующее устройство** (арт. FHL205)  
+Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже.   
+Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.  
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
-#### Промежуточный структурный анкер (арт.FHL202)
 ![](/img/sss/3.FHL202.gif){:class="uk-align-left uk-width-1-3"}
+#### **Промежуточный структурный анкер** (арт.FHL202)
 Служит в качестве направляющей стального троса, а также дополнительной анкерной точкой крепления. Устанавливается через каждые 12 метров.   
-Материал: нержавеющая сталь
- 
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right 
 
-#### Натяжитель для троса (арт. FHL206)
 ![](/img/sss/3.FHL206.gif){:class="uk-align-left uk-width-1-3"}
+#### **Натяжитель для троса** (арт. FHL206)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.
-Материал: нержавеющая сталь
-
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
-#### Ролик-натяжитель (арт. FHL203) 
 ![](/img/sss/3.FHL203.gif){:class="uk-align-left uk-width-1-3"}
+#### **Ролик-натяжитель** (арт. FHL203) 
 Позволяет осуществлять установку троса без разрыва - единым участком, а также обеспечивает равномерное натяжение каждой стороны анкерной линии.  
-Материал: нержавеющая сталь, высоко прочный пластик
-
+**Материал:** нержавеющая сталь, высоко прочный пластик
 ###### отменяет действие align-left и align-right
 
-#### Крайний структурный анкер, нерж.сталь (арт. FHL207) 
 ![](/img/sss/3.FHL207.png){:class="uk-align-left uk-width-1-3"}
+#### **Крайний структурный анкер, нерж.сталь** (арт. FHL207) 
 Применяется для монтажа линии к элементам постоянной конструкции.   
-Материал: нержавеющая сталь
-
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
-#### Цанговый зажим (ZG002)  
 ![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
+#### **Цанговый зажим** (ZG002)  
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
-
 ###### отменяет действие align-left и align-right
 
-#### Трос анкерной линии (арт. SSR001)  
 ![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
+#### **Трос анкерной линии** (арт. SSR001)  
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
-
 ###### отменяет действие align-left и align-right
 
 
