--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -14,7 +14,7 @@ submenu: true
 
 Горизонтальная гибкая анкерная линия **GORIZONT** компании **HIGH SAFETY** - наиболее простое и доступное решение для организации безопасной работы на высоте на любых типах горизонтальных поверхностей (чистка крыш, кровельные работы) на уровне пояса или над головой. 
 
-Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}  
+{% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
 
 ###### отменяет действие align-left и align-right
@@ -31,57 +31,56 @@ submenu: true
  
 ### **Состав системы**
 ![](/img/sss/3.FHL101.gif){:class="uk-align-left uk-width-1-3"}
-
-#### Мобильная анкерная точка, гальв. сталь (FHL101)
+#### **Мобильная анкерная точка, гальв. сталь** (FHL101)
 Обеспечивает беспрепятственное прохождение промежуточных анкерных точек анкерной линии без необходимости отсоединения троса.   
-Материал: гальв. сталь.
+**Материал:** гальв. сталь.
 ###### отменяет действие align-left и align-right
 
-#### Промежуточный структурный анкер, нерж. сталь (FHL102)  
 ![](/img/sss/3.FHL102.gif){:class="uk-align-left uk-width-1-3"}
+#### **Промежуточный структурный анкер, нерж. сталь** (FHL102)  
 •  Возможность свободного перемещения по всей длине анкерной линии.  
 •  Дополнительная точка опоры.  
 •  Возможность установки на стенах зданий, крышах и кровлях.  
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
   
-#### Концевой структурный анкер 1-точечный, нерж. сталь (FHL103)
-![](/img/sss/3.FHL103.gif){:class="uk-align-left uk-width-1-3"}
+![](/img/sss/3.FHL103.gif){:class="uk-align-left uk-width-1-3"}  
+#### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL103)
 Используется при установке линии на анкерные столбы.   
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
 
-#### Концевой структурный анкер 2-точечный, нерж. сталь (FHL104)
 ![](/img/sss/3.FHL104.gif){:class="uk-align-left uk-width-1-3"}
+#### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL104)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
- 
-#### Амортизирующее устройство (FHL105)
+
 ![](/img/sss/3.FHL105.gif){:class="uk-align-left uk-width-1-3"}
+#### **Амортизирующее устройство** (FHL105)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса. 
-Материал: нержавеющая сталь
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
-#### Натяжитель для троса (FHL106)
 ![](/img/sss/3.FHL106.gif){:class="uk-align-left uk-width-1-3"}
+#### **Натяжитель для троса** (FHL106)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
-Материал: нержавеющая сталь
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
-#### Промежуточный структурный анкер угловой (FHL107)
 ![](/img/sss/3.FHL107.gif){:class="uk-align-left uk-width-1-3"}
+#### **Промежуточный структурный анкер угловой** (FHL107)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
-Материал: нержавеющая сталь
+**Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
-#### Цанговый зажим (ZG002)
 ![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
+#### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### отменяет действие align-left и align-right
 
-#### Трос из нержавеющей стали (SSR001) 
 ![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
+#### **Трос из нержавеющей стали** (SSR001) 
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### отменяет действие align-left и align-right
 
