--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -10,7 +10,7 @@ submenu: true
 
 Горизонтальная жесткая анкерная линия **MOST** компании **HIGH SAFETY** - универсальное решение для всех видов работ: работа на автоцистернах и жд вагонах,- слив, налив, взятие проб, проведение замеров, работы на крыше, работы в положении сидя при обслуживании фасадов промышленных и городских зданий (торговых центров, жилых домов, бизнес-центров). 
 
-Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}
+{% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия 
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
 ###### отменяет действие align-left и align-right
 
@@ -28,47 +28,55 @@ submenu: true
 
 #### **Состав системы**
 
-#### Мобильная анкерная точка (арт. RHL301)
-![](/img/sss/3.RHL301.gif){:class="uk-align-left uk-width-1-4"}    
-Имеет конструкцию, позволяющую использовать его совместно с различными типами карабинов - увеличенное кольцо для крепления. Корпус анкерной точки (тележки) может быть выполнен как в серебристом цвете, так и в золотом, что позволяет легко обозначить его в условиях плохой видимости.  Роликовые колеса тележки из капролона обеспечивают бесперепятсвенное движение тележки по всей длине линии.     
-Материал: алюминий. 
+![](/img/sss/3.RHL301.gif){:class="uk-align-left uk-width-1-3"}
+#### **Мобильная анкерная точка** (арт. RHL301)
+Имеет конструкцию, позволяющую использовать его совместно с различными типами карабинов - увеличенное кольцо для крепления.   
+Корпус анкерной точки (тележки) может быть выполнен как в серебристом цвете, так и в золотом, что позволяет легко обозначить его в условиях плохой видимости.    
+Роликовые колеса тележки из капролона обеспечивают бесперепятсвенное движение тележки по всей длине линии.     
+**Материал:** алюминий. 
 ###### отменяет действие align-left и align-right
- 
-#### Сегмент анкерной направляющей (арт. RHL302)
-![](/img/sss/3.RHL302.gif){:class="uk-align-left uk-width-1-4"}
-Сегмент анкерной направляющей имеет длину 1, 2 или 3 м. Благодаря этому возможна установка на любую длину и геометрию. 
+
+![](/img/sss/3.RHL302.gif){:class="uk-align-left uk-width-1-3"}
+#### **Сегмент анкерной направляющей** (арт. RHL302)
+Сегмент анкерной направляющей имеет длину 1, 2 или 3 м.   
+Благодаря этому возможна установка на любую длину и геометрию.   
 Может быть выполнен в серебристом или черном цвете, благодаря чему органично вписывается в оформление современных фасадов зданий.   
-Материал: алюминий.
+**Материал:** алюминий.
 ###### отменяет действие align-left и align-right
- 
-#### Соединитель сегментов (арт. RHL303)
-![](/img/sss/3.RHL303.gif){:class="uk-align-left uk-width-1-4"}
-Предназначен для соединения рельсовых сегментов жесткой анкерной линии. Устанавливается на стыке сегментов для надежного соединения участков линии.   
-Материал: алюминий. 
+
+![](/img/sss/3.RHL303.gif){:class="uk-align-left uk-width-1-3"}
+#### **Соединитель сегментов** (арт. RHL303)
+Предназначен для соединения рельсовых сегментов жесткой анкерной линии.   
+Устанавливается на стыке сегментов для надежного соединения участков линии.     
+**Материал:** алюминий. 
 ###### отменяет действие align-left и align-right
- 
-#### Концевой ограничитель (арт. RHL304)
-![](/img/sss/3.RHL304.gif){:class="uk-align-left uk-width-1-4"}
-Концевой ограничитель устанавливается по краям линии (по одному с каждого конца). Предназначен для предотвращения случайного соскальзывания мобильной анкерной точки (тележки) с рельсовго сегмента. Может быть выполнен в серебристом или золотом цвете.   
-Материал: алюминий. 
+
+![](/img/sss/3.RHL304.gif){:class="uk-align-left uk-width-1-3"}
+#### **Концевой ограничитель** (арт. RHL304)
+Концевой ограничитель устанавливается по краям линии (по одному с каждого конца).   
+Предназначен для предотвращения случайного соскальзывания мобильной анкерной точки (тележки) с рельсовго сегмента.   
+Может быть выполнен в серебристом или золотом цвете.     
+**Материал:** алюминий. 
 ###### отменяет действие align-left и align-right
- 
-#### Держатель сегментов (арт. RHL305)
-![](/img/sss/3.RHL305.gif){:class="uk-align-left uk-width-1-4"}
-Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов). Предназначен для крепления анкерной линии к элементам постоянной конструкции.   
-Материал: алюминий.
+
+![](/img/sss/3.RHL305.gif){:class="uk-align-left uk-width-1-3"}
+#### **Держатель сегментов** (арт. RHL305)
+Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов).   
+Предназначен для крепления анкерной линии к элементам постоянной конструкции.     
+**Материал:** алюминий.
 ###### отменяет действие align-left и align-right
- 
-#### Структурный анкер с крепление одним болтом/ двумя болтами (арт. RHL 306/RHL307)
-![](/img/sss/3.RHL306.gif){:class="uk-align-left uk-width-1-4"}
-Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов). Предназначен для крепления анкерной линии к элементам постоянной конструкции.   
-Материал: нержавеющая сталь.
+
+![](/img/sss/3.RHL306.gif){:class="uk-align-left uk-width-1-3"}
+#### **Структурный анкер с крепление одним болтом/ двумя болтами** (арт. RHL 306/RHL307)
+Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов).   
+Предназначен для крепления анкерной линии к элементам постоянной конструкции.     
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
- 
-#### Шкант для соединения сегментов (арт. RHL308)
-![](/img/sss/3.RHL308.gif){:class="uk-align-left uk-width-1-4"}
+
+![](/img/sss/3.RHL308.gif){:class="uk-align-left uk-width-1-3"}
+#### **Шкант для соединения сегментов** (арт. RHL308)
 Используется при соединении рельсовых сегментов на стыке участков.   
-Материал: нержавеющая сталь.
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
 
 
