--- a/3.4_VERTIKAL.md
+++ b/3.4_VERTIKAL.md
@@ -14,69 +14,75 @@ submenu: true
 Анкерная линия может быть установлена как в помещении, так и на открытом воздухе, в том числе в суровых климатических или эксплуатационных условиях (районы Крайнего Севера, крыши домов, морские буровые платформы, нефтяные вышки).
 Благодаря специальной конструкции захват (перемещаемое средство защиты ползункового типа) беспрепятственно перемещается по всей длине жесткой анкерной линии без помощи рук, обеспечивая тем самым непрерывную защиту пользователя на всей протяженности участка подъема/спуска.
 
-Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}
-Заключение МИНПРОМТОРГа {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
+{% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %} Сертификат соответствия   
+{% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %}
  
 ### **Преимущества жесткой анкерной линии:**
-•	Встроенное в верхнюю планку анкерной линии герметичное амортизирующее устройство с индикатором падения и натяжения, снижающее нагрузку на человека и элементы постоянной конструкции в случае срыва.  
-Важно! ГОСТР Р ЕН  363-2007, ГОСТР Р ЕН 353-1-2008 – Амортизирующее устройство - обязательный компонент анкерной линии!  
-•	Два одновременно работающих пользователя на одном участке линии. Два перемещаемых СИЗ ползункового типа (захвата) входят в комплект поставки.  
-•	Захваты выполнены из нержавеющей стали.  
-•	Верхняя удлиняющая планка обеспечивает безопасный выход пользователя на крышу здания/ сооружения, площадки мачт, вышек и иных конструкций. Высота планки (1300 мм) позволяет пользователю оставаться непрерывно застрахованным в момент выхода на горизонтальную площадку без необходимости отсоединения от жесткой анкерной линии у верхнего края лестницы и организации дополнительной анкерной точки крепления.  
-•	Уникальное крепление анкерной линии позволяет устанавливать ее на все существующие типы вертикальных лестниц с углом отклонения более 75о (в соответствии с ГОСТ) с любым диаметром (от 10 до 45 мм) и формой ступени (квадратные, круглые, треугольные), а также расстоянием между ступенями (от 120 до 350 мм).  
-•	Искробезопасность. Жесткую анкерную линию возможно устанавливать в пожароопасных и взрывоопасных зонах. Подтверждено сертификатом (Взрывозащита: IIC Ga T6).  
-Важно! При установке жесткой анкерной линии во взрывоопасной среде проверяйте наличие соответствующего сертификата и маркировки: IIC Ga T6 на всех элементах системы.   
-•	Быстрый монтаж своими силами (не требует специальных навыков).
+-	Встроенное в верхнюю планку анкерной линии герметичное амортизирующее устройство с индикатором падения и натяжения, снижающее нагрузку на человека и элементы постоянной конструкции в случае срыва.  
+*Важно!* ГОСТР Р ЕН  363-2007, ГОСТР Р ЕН 353-1-2008 – Амортизирующее устройство - обязательный компонент анкерной линии!  
+-	Два одновременно работающих пользователя на одном участке линии. Два перемещаемых СИЗ ползункового типа (захвата) входят в комплект поставки.  
+-	Захваты выполнены из нержавеющей стали.  
+-	Верхняя удлиняющая планка обеспечивает безопасный выход пользователя на крышу здания/ сооружения, площадки мачт, вышек и иных конструкций. Высота планки (1300 мм) позволяет пользователю оставаться непрерывно застрахованным в момент выхода на горизонтальную площадку без необходимости отсоединения от жесткой анкерной линии у верхнего края лестницы и организации дополнительной анкерной точки крепления.  
+-	Уникальное крепление анкерной линии позволяет устанавливать ее на все существующие типы вертикальных лестниц с углом отклонения более 75о (в соответствии с ГОСТ) с любым диаметром (от 10 до 45 мм) и формой ступени (квадратные, круглые, треугольные), а также расстоянием между ступенями (от 120 до 350 мм).  
+-	Искробезопасность. Жесткую анкерную линию возможно устанавливать в пожароопасных и взрывоопасных зонах. Подтверждено сертификатом (Взрывозащита: IIC Ga T6).  
+*Важно!* При установке жесткой анкерной линии во взрывоопасной среде проверяйте наличие соответствующего сертификата и маркировки: IIC Ga T6 на всех элементах системы.   
+-	***Быстрый монтаж своими силами*** (не требует специальных навыков).
  
  
 ### **Состав вертикальной жесткой анкерной линии:**
 ![](/img/sss/3.4.1.jpg)
 
-#### Перемещаемое средство защиты ползункового типа (захват) (арт. RVL101)
 ![](/img/sss/3.RVL101.gif){:class="uk-align-left uk-width-1-3"}
-Обеспечивает сободное перемещение по вертикальной лестнице при подъёме/спуске. Автоматически блокируется на анкерной линии при падении.
-В комплект входит 2 захвата.  
-Материал: нержавеющая сталь.  
+#### **Перемещаемое средство защиты ползункового типа (захват)** (арт. RVL101)
+Обеспечивает сободное перемещение по вертикальной лестнице при подъёме/спуске.   
+Автоматически блокируется на анкерной линии при падении.  
+В комплект входит 2 захвата.    
+**Материал:** нержавеющая сталь.  
 ###### отменяет действие align-left и align-right
 
 ![](/img/sss/3.RVL102.0.jpg)
 ###### отменяет действие align-left и align-right
-#### Верхний структурный анкер с амортизирующим устройством (арт. RVL102)
 ![](/img/sss/3.RVL102.gif){:class="uk-align-left uk-width-1-3"}
-Амортизатор закрытого типа оснащеный индикатором падения/натяжения встроен в верхний структурный анкер. Цветовая маркировка на оси амортизатора облегчает визуальный контроль натяжения троса анкерной линии, а также помогает с легкостью идентифицировать факт останова падения. Одновременный подъем до 2 (двух) пользователей.  
-Материал: нержавеющая сталь.  
+#### **Верхний структурный анкер с амортизирующим устройством** (арт. RVL102)
+Амортизатор закрытого типа оснащеный индикатором падения/натяжения встроен в верхний структурный анкер.   
+Цветовая маркировка на оси амортизатора облегчает визуальный контроль натяжения троса анкерной линии, а также помогает с легкостью идентифицировать факт останова падения.   
+Одновременный подъем до 2 (двух) пользователей.    
+**Материал:** нержавеющая сталь.    
 ###### отменяет действие align-left и align-right
  
-#### Верхний структурный анкер с элементом крепления (арт. RVL103)
-![](/img/sss/3.RVL103.gif){:class="uk-align-left uk-width-1-3"}
-Простой и быстрый монтаж как специалистами нашей компанией, так и собственными силами Заказчика.   
-Защита креплений - антивандальное исполнение.  
-Возможность монтажа на существующие лестницы, мачты, вышки, башни, опоры любого типа.  
-Материал: нержавеющая сталь. 
+![](/img/sss/3.RVL103.gif){:class="uk-align-left uk-width-1-3"} 
+#### **Верхний структурный анкер с элементом крепления** (арт. RVL103)
+Простой и быстрый монтаж как специалистами нашей компанией, так и собственными силами Заказчика.     
+Защита креплений - антивандальное исполнение.    
+Возможность монтажа на существующие лестницы, мачты, вышки, башни, опоры любого типа.    
+**Материал:** нержавеющая сталь. 
 ###### отменяет действие align-left и align-right
- 
-#### Верхняя удлиняющая планка (арт. RVL104)
+
 ![](/img/sss/3.RVL104.gif){:class="uk-align-left uk-width-1-3"}
+#### **Верхняя удлиняющая планка** (арт. RVL104)
 Обеспечивает страховку пользователя  при выходе на рабочую площадку.    
-Длина: 1 300 мм.  
-Материал: нержавеющая сталь. 
+**Длина:** 1 300 мм.  
+**Материал:** нержавеющая сталь. 
 ###### отменяет действие align-left и align-right
- 
-#### Нижний структурный анкер с элементом крепления и элементом натяжения (арт. RVL105)
+
 ![](/img/sss/3.RVL105.gif){:class="uk-align-left uk-width-1-3"}
-Защита креплений - антивандальное исполнение.  Индикатор натяжения исключает возможность ошибки при монтаже.  
-Материал: нержавеющая сталь. 
+#### **Нижний структурный анкер с элементом крепления и элементом натяжения** (арт. RVL105)
+Защита креплений - антивандальное исполнение.    
+Индикатор натяжения исключает возможность ошибки при монтаже.    
+**Материал:** нержавеющая сталь. 
 ###### отменяет действие align-left и align-right
- 
-#### Держатель троса (арт. RVL106)
+
 ![](/img/sss/3.RVL106.gif){:class="uk-align-left uk-width-1-3"}
-Устанавливается на протяжении всей длины анкерной линии через каждые 7 метров. Легко монтируется к конструкции существующей лестницы обжимным методом.   
-Материал: нержавеющая сталь.
+#### **Держатель троса** (арт. RVL106)
+Устанавливается на протяжении всей длины анкерной линии через каждые 7 метров.   
+Легко монтируется к конструкции существующей лестницы обжимным методом.     
+**Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
- 
-#### Трос диаметром 8 мм (арт. SSR001)
+
 ![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
-Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность системы. Натяжение троса происходит с помощью специального ключа, который входит в комплект поставки.
+#### **Трос диаметром 8 мм** (арт. SSR001)
+Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность системы.   
+Натяжение троса происходит с помощью специального ключа, который входит в комплект поставки.  
 ###### отменяет действие align-left и align-right
  
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
