--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -19,16 +19,16 @@ submenu: true
 ![](/img/sss/3.5.1.jpg)
 ###### отменяет действие align-left и align-right 
 
-•	До 7-и одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
-•	Установка анкерной линии на любой высоте при факторе падения 0;  
-•	Совместима с любыми типами СИЗ втягивающего типа;  
-•	Отклонение от вертикали 300;  
-•	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров.   
-•	Мобильная анкерная точка с роликовым механизмом, позволяющим беспрепятсвенно передвигаться вдоль линии.   
-•	Мобильная анкерная точка (тележка) оснащена механизмом, предотвращающим несанкционированное снятие (демонтаж при помощи специального ключа).   
-•	Оснащена дополнительной резервирующей петлей, гарантирующей безопасную эксплуатацию системы в случае некорректной установки цангового зажима.   
-•	Все компоненты линии изготовлены из нержавеющей стали.   
-•	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6). Подтверждено сертификатом № СДС.ТП.ДСП.020014-19.
+-	До 7-и одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
+-	Установка анкерной линии на любой высоте при факторе падения 0;  
+-	Совместима с любыми типами СИЗ втягивающего типа;  
+-	Отклонение от вертикали 300;  
+-	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров.   
+-	Мобильная анкерная точка с роликовым механизмом, позволяющим беспрепятсвенно передвигаться вдоль линии.   
+-	Мобильная анкерная точка (тележка) оснащена механизмом, предотвращающим несанкционированное снятие (демонтаж при помощи специального ключа).   
+-	Оснащена дополнительной резервирующей петлей, гарантирующей безопасную эксплуатацию системы в случае некорректной установки цангового зажима.   
+-	Все компоненты линии изготовлены из нержавеющей стали.   
+-	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6). Подтверждено сертификатом № СДС.ТП.ДСП.020014-19.
 ###### отменяет действие align-left и align-right
 
 ### **Состав системы**
@@ -40,7 +40,7 @@ submenu: true
 **Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
 
-![](/img/sss/3.FHL402.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.FHL402.gif){:class="uk-align-left uk-width-1-3"}
 #### **Промежуточный структурный анкер, нерж. сталь** (FHL402)
 •  Возможность свободного перемещения по всей длине анкерной линии.  
 •  Дополнительная точка опоры.  
@@ -48,42 +48,42 @@ submenu: true
 **Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
 
-![](/img/sss/3.FHL403.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.FHL403.gif){:class="uk-align-left uk-width-1-3"}
 #### **Концевой структурный анкер 1-точечный, нерж. сталь** (FHL403)
 Используется при установке линии на анкерные столбы.   
 **Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
  
-![](/img/sss/3.FHL404.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.FHL404.gif){:class="uk-align-left uk-width-1-3"}
 #### **Концевой структурный анкер 2-точечный, нерж. сталь** (FHL404)
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
 **Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
  
-![](/img/sss/3.FHL405.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.FHL405.gif){:class="uk-align-left uk-width-1-3"}
 #### **Амортизирующее устройство** (FHL405)
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
   
-![](/img/sss/3.FHL406.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.FHL406.gif){:class="uk-align-left uk-width-1-3"}
 #### **Натяжитель для троса** (FHL406)
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
 **Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
  
-![](/img/sss/3.FHL407.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.FHL407.gif){:class="uk-align-left uk-width-1-3"}
 #### **Промежуточный структурный анкер угловой** (FHL407)
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
 **Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
    
-![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
 #### **Цанговый зажим** (ZG002)
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
 ###### отменяет действие align-left и align-right
  
-![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-2"}
+![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
 #### **Трос из нержавеющей стали** (SSR001)
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
 ###### отменяет действие align-left и align-right
