--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -16,8 +16,10 @@ submenu: true
 ###### отменяет действие align-left и align-right
 
 ![](/img/sss/3.AP-2h.jpg){:class="uk-align-left uk-width-1-3"}
-### Анкерный столб, круглый (арт. AP-2h)
-Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка (входит в комплект поставки) для присоединения средств индивидуальной защиты от падения с высоты.  Для столба высотой 0,8 м - 1 м  дополнительно предусмотрены ребра жесткости в основании устройства.   
+### **Анкерный столб, круглый** (арт. AP-2h)
+Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.   
+На конце столба устанавливается анкерная точка (входит в комплект поставки) для присоединения средств индивидуальной защиты от падения с высоты.    
+Для столба высотой 0,8 м - 1 м  дополнительно предусмотрены ребра жесткости в основании устройства.   
  
 #### Характеристики:    
 **Материал:** гальванизированная сталь  
@@ -41,7 +43,8 @@ submenu: true
 ![](/img/sss/3.AP-8h.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб, многогранный** (арт. AP-8h)  
 
-Представляет собой анкерное устройство класса А и предназначен для организации анкерной точки на элементах постоянных конструкций: стальных - установка при помощи болтовых элементов М12, бетонных - при помощи химических/механических анкеров. Монтаж на балки осуществляется при помощи ответной пластины и шпилек.       
+Представляет собой анкерное устройство класса А и предназначен для организации анкерной точки на элементах постоянных конструкций: стальных - установка при помощи болтовых элементов М12, бетонных - при помощи химических/механических анкеров.   
+Монтаж на балки осуществляется при помощи ответной пластины и шпилек.       
 #### Характеристики:  
 **Материал:** нержавеющая сталь  
 **Количество пользователей:** 2  
@@ -51,7 +54,9 @@ submenu: true
 ![](/img/sss/3.AP-T200.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб "ТИТАН 200"** (арт. AP-T200)  
 
-Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.     
+Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.   
+На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.    
+Монтируется как на бетонные, так и стальные поверхности.       
 #### Характеристики:  
 **Материал:** титан  
 **Высота столба:** 2 м  
@@ -74,7 +79,9 @@ submenu: true
 ![](/img/sss/3.AP-S200.jpg){:class="uk-align-left uk-width-1-3"} 
 #### **Анкерный столб AP-S200** (арт. AP-S200)
 
-Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.      
+Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.   
+На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.    
+Монтируется как на бетонные, так и стальные поверхности.        
 #### Характеристики:  
 **Материал:** оцинкованная сталь  
 **Высота столба:** 2 м  
@@ -96,7 +103,8 @@ submenu: true
 ![](/img/sss/3.AP-R10.jpg){:class="uk-align-left uk-width-1-3"}  
 #### **Анкерный столб для кровли** (арт. AP-R10)
 
-Представляет собой анкерное устройство класса A и предназначен для монтажа на мягкие кровли (сэндвич-панель, профлист и т.д.). Крепление к поверхности осуществляется при помощи саморезов.   
+Представляет собой анкерное устройство класса A и предназначен для монтажа на мягкие кровли (сэндвич-панель, профлист и т.д.).   
+Крепление к поверхности осуществляется при помощи саморезов.     
 #### Характеристики:  
 **Материал:** нержавеющая сталь  
 **Количество пользователей:** 2  
