--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -58,7 +58,8 @@ submenu: true
 
 ![](/img/sss/3.FHL105.gif){:class="uk-align-left uk-width-1-3"}
 #### **Амортизирующее устройство** (FHL105)
-Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса. 
+Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии.  
+Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
 
