--- a/3.4_VERTIKAL.md
+++ b/3.4_VERTIKAL.md
@@ -19,13 +19,13 @@ submenu: true
  
 ### **Преимущества жесткой анкерной линии:**
 -	Встроенное в верхнюю планку анкерной линии герметичное амортизирующее устройство с индикатором падения и натяжения, снижающее нагрузку на человека и элементы постоянной конструкции в случае срыва.  
-*Важно!* ГОСТР Р ЕН  363-2007, ГОСТР Р ЕН 353-1-2008 – Амортизирующее устройство - обязательный компонент анкерной линии!  
+***Важно!*** ГОСТР Р ЕН  363-2007, ГОСТР Р ЕН 353-1-2008 – Амортизирующее устройство - обязательный компонент анкерной линии!  
 -	Два одновременно работающих пользователя на одном участке линии. Два перемещаемых СИЗ ползункового типа (захвата) входят в комплект поставки.  
 -	Захваты выполнены из нержавеющей стали.  
 -	Верхняя удлиняющая планка обеспечивает безопасный выход пользователя на крышу здания/ сооружения, площадки мачт, вышек и иных конструкций. Высота планки (1300 мм) позволяет пользователю оставаться непрерывно застрахованным в момент выхода на горизонтальную площадку без необходимости отсоединения от жесткой анкерной линии у верхнего края лестницы и организации дополнительной анкерной точки крепления.  
 -	Уникальное крепление анкерной линии позволяет устанавливать ее на все существующие типы вертикальных лестниц с углом отклонения более 75о (в соответствии с ГОСТ) с любым диаметром (от 10 до 45 мм) и формой ступени (квадратные, круглые, треугольные), а также расстоянием между ступенями (от 120 до 350 мм).  
 -	Искробезопасность. Жесткую анкерную линию возможно устанавливать в пожароопасных и взрывоопасных зонах. Подтверждено сертификатом (Взрывозащита: IIC Ga T6).  
-*Важно!* При установке жесткой анкерной линии во взрывоопасной среде проверяйте наличие соответствующего сертификата и маркировки: IIC Ga T6 на всех элементах системы.   
+***Важно!*** При установке жесткой анкерной линии во взрывоопасной среде проверяйте наличие соответствующего сертификата и маркировки: IIC Ga T6 на всех элементах системы.   
 -	***Быстрый монтаж своими силами*** (не требует специальных навыков).
  
  
