--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -36,7 +36,8 @@ submenu: true
 #### **Мобильная анкерная точка, нерж. сталь** (FHL401)
 ![](/img/sss/3.FHL401.1.1.gif)
 ###### отменяет действие align-left и align-right
-Обеспечивает беспрепятственное прохождение промежуточных точек анкерной линии на любой высоте установки при факторе падения 0. Совместима с любыми типами СИЗ втягивающего типа.    
+Обеспечивает беспрепятственное прохождение промежуточных точек анкерной линии на любой высоте установки при факторе падения 0.  
+Совместима с любыми типами СИЗ втягивающего типа.    
 **Материал:** нержавеющая сталь.
 ###### отменяет действие align-left и align-right
 
@@ -62,7 +63,8 @@ submenu: true
  
 ![](/img/sss/3.FHL405.gif){:class="uk-align-left uk-width-1-3"}
 #### **Амортизирующее устройство** (FHL405)
-Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
+Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии.  
+Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.   
 **Материал:** нержавеющая сталь
 ###### отменяет действие align-left и align-right
   
