--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -13,29 +13,30 @@ __Комплекс по обследованию фасада производи
 
 __Вид обследования:__  
 1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению. 
-2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.   
-- Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).  
-- Обследование межпанельных швов в панельных зданиях.  
-- Тепловизионное обследование.
- 
+2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.  
 ###### отменяет действие align-left и align-right
+
+***Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).***  
+ 
 
 ### **Что диагностируем.**
 - Неразрушающий контроль бетона Ультразвуковой метод определяем: глубины и размера трещин; качества бетонирования; возможных дефектов. Наличие пустот в бетоне или в штукатурном слое. 
-- Обнаружение коррозии (ржавчина, окисел, патина)
+- Обследование межпанельных швов в панельных зданиях.  
+- Тепловизионное обследование.  
+- Обнаружение коррозии (ржавчина, окисел, патина).
 - Состояние теплоизоляции на теплопотери.
 - Конструкций на загрязненность.
 - Целостность конструкций.
 - Состояние сварочных швов в металлоконструкциях.
 - Состояние пассивной и активной молниезащиты. 
 - Наличие трещин в металлоконструкциях.  
-- Состояние защитных покрытий, толщины.( гидроизоляционные, теплоизоляционные, звукопоглащающие, светопоглащающие, светопропускающие.)
-- Состояние анкерных креплений, мачтовых канатов оттяжек (на наличие коррозии, прочность соединения)
+- Состояние защитных покрытий, толщины (гидроизоляционные, теплоизоляционные, звукопоглащающие, светопоглащающие, светопропускающие).
+- Состояние анкерных креплений, мачтовых канатов оттяжек (на наличие коррозии, прочность соединения).
 
 
 ### **Что вам даст обследование фасада.**  
 1. Достоверную информацию, на основании которой вы будете принимать решения.
-2. Заключение который будет является доказательством, свидетельствующим о наличии / отсутствии интересующих фактических данных в разрешении того или иного вопроса.
+2. Заключение который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.
 3. Ценную информацию для формирования технического задания.
 4. Контроль выполненных работ. 
 5. Сверку проектной (исполнительной) документации с выполненными работами.
