--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -20,7 +20,7 @@ __Вид обследования:__
  
 
 ### **Что диагностируем.**
-- Неразрушающий контроль бетона Ультразвуковой метод определяем: глубины и размера трещин; качества бетонирования; возможных дефектов. Наличие пустот в бетоне или в штукатурном слое. 
+- Неразрушающий контроль бетона Ультразвуковой метод определяем: глубины и размера трещин; качества бетонирования; возможных дефектов; наличие пустот в бетоне или в штукатурном слое. 
 - Обследование межпанельных швов в панельных зданиях.  
 - Тепловизионное обследование.  
 - Обнаружение коррозии (ржавчина, окисел, патина).
