--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -87,7 +87,7 @@ submenu: true
 
 
 ### **Какие документы получаем по окончанию обследования.**
-__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__ который будет является доказательством, свидетельствующим о наличии / отсутствии интересующих фактических данных в разрешении того или иного вопроса.
+__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__ который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.
 
 Техническое заключение составляется согласно __ГОСТ 31937-2011.__    
 * В которые входят данные осмотра, фото и видео материалы.  
