--- a/1.3_.md
+++ b/1.3_.md
@@ -47,7 +47,7 @@ submenu: true
 - Состояние пассивной и активной молниезащиты. Проверка расчетной пропускной способности, целостность токоотводов и антенн молниезащиты. 
 - Наличие трещин в металлоконструкциях.  
 - Неразрушающий контроль бетона. 
-- Обнаружение коррозии (ржавчина, окисел, патина)
+- Обнаружение коррозии (ржавчина, окисел, патина).
 - Состояние теплоизоляции на теплопотери.
 
 ***Все работы производятся с упором на богатейший опыт в оценки риска, методологии работы на высоте, а также по процедурам анализа окружающей обстановки.***
