--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -48,9 +48,9 @@ submenu: true
 **Метод ударного импульса**
 
 ` ` Метод ударного импульса – самый распространённый среди неразрушающих методов из-за простоты измерений. Он позволяет определять класс бетона, производить измерения под разными углами к поверхности, учитывать пластичность и упругость бетона.     
-Суть метода:  
+**Суть метода:**  
 Боёк со сферическим ударником под действием пружины ударяется о поверхность. Энергия удара расходуется на деформации бетона. В результате пластических деформаций образуется лунка, в результате упругих возникает реактивная сила. Электромеханический преобразователь превращает механическую энергию удара в электрический импульс. Результаты выдаются в единицах измерения прочности на сжатие.   
-К достоинствам метода относят оперативность, низкие трудозатраты, отсутствие сложных вычислений, слабую зависимость от состава бетона. Недостатком считается определение прочности в слое глубиной до 50 мм.
+* К достоинствам метода относят оперативность, низкие трудозатраты, отсутствие сложных вычислений, слабую зависимость от состава бетона. Недостатком считается определение прочности в слое глубиной до 50 мм.
  
 **Метод упругого отскока**
 
@@ -58,13 +58,14 @@ submenu: true
 
 ` ` Диапазон измерений методом упругого отскока – 5-50 МПа. К достоинствам метода относят простоту и скорость измерений, возможность оценки прочности густоармированных конструкций. Ключевые недостатки такие же, как у других ударных методов: контроль прочности в поверхностном слое (глубина 20-30 мм), необходимость частых поверок (каждые 500 ударов), построение градуировочных зависимостей.
 
-` ` Главным достоинством данной методики является его простота и возможность работы в сложных условиях. Однако следует учитывать, что полученных данных недостаточно для экспертной оценки прочности бетона.  Для этого необходимы другие методики контроля, в частности отрыв со скалыванием.
+* Главным достоинством данной методики является его простота и возможность работы в сложных условиях. Однако следует учитывать, что полученных данных недостаточно для экспертной оценки прочности бетона.  Для этого необходимы другие методики контроля, в частности отрыв со скалыванием.
 
 ###### отменяет действие align-left и align-right
 ### **5. Тепловизионное обследование.**  
-ВСТАВИТЬ ФОТО
 
-` ` Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** 
+***ВСТАВИТЬ ФОТО***
+
+Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** 
 {% include el-pdf.html text="54852_2011" name="GOST_R_54852_2011.pdf" %} «ЗДАНИЯ И СООРУЖЕНИЯ. МЕТОД ТЕПЛОВИЗИОННОГО КОНТРОЛЯ КАЧЕСТВА ТЕПЛОИЗОЛЯЦИИ ОГРАЖДАЮЩИХ КОНСТРУКЦИЙ», позволяющий найти локализацию мест протечек и утерь тепла, недоступных обнаружением традиционными методами, для дальнейшего их устранения.
 
 Область применение тепловизора:  
