--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -18,7 +18,8 @@ submenu: true
        
 ###### отменяет действие align-left и align-right
 ### 2. __[Электро-векторное картирование]({% link 7.1.2.0_evk.md %})__    
-(вставить фото)
+
+***ВСТАВИТЬ ФОТО***
 
 ###### отменяет действие align-left и align-right
 ` ` Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
