--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -78,3 +78,4 @@ submenu: true
   - Быстрая локализация горячих точек в электрических установках.
   - Выявление мест аномального нагрева.  
 
+***В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.***
