--- a/_portfolio/20160824.md
+++ b/_portfolio/20160824.md
@@ -1,16 +1,11 @@
 ---
 cover: /img/portfolio/20160824.jpg
-caption: осмотр кровли храма святителя Иова Патриарха Московского и всея Руси в Кунцеве
-description: 12 сентября 2017 года состоялся осмотр кровли объекта по результатам которого можно с уверенностью утверждать...
+caption: Обследование светопрозрачной конструкции кровли атриума осмотр кровли храма святителя Иова Патриарха Московского и всея Руси в Кунцеве
+description: Причины обследования: течь светопрозрачной конструкции атриума. 12 сентября 2017 года состоялся осмотр кровли объекта по результатам которого можно с уверенностью утверждать...
 title: Осмотр Можайское 56
 ---
 
----
-cover: /img/portfolio/20160824.jpg
-caption: Обследование светопрозрачной конструкции кровли атриума
-description: Причины обследования: течь светопрозрачной конструкции атриума.
-title: Осмотр Можайское 56 
----
+
 
 ### выше идет контент сгенирированый шаблоном по данным в заголовке
 ### Дальше контент из .md- файла
