--- a/_portfolio/20160824.md
+++ b/_portfolio/20160824.md
@@ -1,8 +1,8 @@
 ---
 cover: /img/portfolio/20160824.jpg
-caption: Обследование светопрозрачной конструкции кровли атриума осмотр кровли храма святителя Иова Патриарха Московского и всея Руси в Кунцеве
-description: Причины обследования: течь светопрозрачной конструкции атриума. 12 сентября 2017 года состоялся осмотр кровли объекта по результатам которого можно с уверенностью утверждать...
-title: Осмотр Можайское 56
+caption: Обследование светопрозрачной конструкции кровли атриума.
+description: Причины обследования течь светопрозрачной конструкции атриума.
+title: 20160824
 ---
 
 
