--- a/_portfolio/20160824.md
+++ b/_portfolio/20160824.md
@@ -2,38 +2,39 @@
 cover: /img/portfolio/20160824.jpg
 caption: Обследование светопрозрачной конструкции кровли атриума.
 description: Причины обследования течь светопрозрачной конструкции атриума.
-title: 20160824
+title: Обследование светопрозрачной конструкции кровли атриума
 ---
 
 
-Отчет по результатам проведенной работы:
-на комплекс работ по обследованию герметичности светопрозрачной конструкции кровли атриумов.
-Объект расположен по адресу: Московская область, Химки 
+### **Отчет по результатам проведенной работы:**
+на комплекс работ по обследованию герметичности светопрозрачной конструкции кровли атриумов.  
+Объект расположен по адресу: Московская область, Химки   
 Шифр проекта: 20160824.	
 
-Причины обследования: течь светопрозрачной конструкции атриума.
+#### Причины обследования: течь светопрозрачной конструкции атриума.
 
-Техническое задание.
+### **Техническое задание.**
 1.	Обследование светопрозрачной конструкции кровли атриума.
 2.	Составление отчета об обследовании с указанием причин протечек и способе их устронения.
 
-ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ
+### **ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ**
 1.	Организация безопастного доступа к месту проведения обследования.
 2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест и характера.
 3.	Сбор данных.
 4.	Анализ полученных результатов визуального обследования.
 5.	Составление заключения.
 
-***Фото*** 
-
 При визуальном обследовании, над местом возникновения протечек, были выявлены предыдущие следы ремонта, которые указывали на то, что ремонт выполнялся не квалифицированными специалистами:
+
+
+***Фото***
 1.	Закрытое герметиками технологический зазор для стока воды. Из-за этого не осуществляется сток воды.
+###### отменяет действие align-left и align-right
+
 
 ***Фото***
-
 2.	При выполнении планового ремонта, монтаж новой бутиловой ленты оканчивался на прижимной планке. При таком монтаж не может быть обеспечено герметичное соединение горизонтальной бутиловой ленты с вертикальной, что означает отсутствие герметичности в узловом соединении.
-
-***Фото***
+###### отменяет действие align-left и align-right
 
 По результатам проведенного обследования: 
 - было составлен отчет. 
