--- a/_portfolio/20191213.md
+++ b/_portfolio/20191213.md
@@ -1,5 +1,5 @@
 ---
-cover: /img/portfolio/20191213.jpg
+cover: /img/portfolio/20191213.jpeg
 caption: Обследование кровельного покрытия из ТПО мембраны
 description: Причины обследования Контроль качества монтажа кровельного покрытия ТПО мембраны
 title: Обследование кровельного покрытия из ТПО мембраны.
