--- a/2.0_access.md
+++ b/2.0_access.md
@@ -6,6 +6,12 @@ sortid: 2.0
 submenu: true
 ---
 
+### ***Обеспечим доступ в любую труднодоступную зону специалистам для обследования:***  
+- кровля  
+- фасад  
+- замкнутого пространства  
+***ЗАКАЗАТЬ***
+
 ` ` Мы являемся специалистами в области проектирования безопасных систем доступа в самые труднодоступные места.  
 Ликвидация рисков для жизни и здоровья Ваших сотрудников на высоте является первостепенной задачей.   
 Для предоставления доступа Вашему специалисту в труднодоступное место, мы разработаем и установим безопасный путь.   
