--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -5,6 +5,8 @@ sortid: 1.2
 submenu: true
 ---
 
+{% include el-slider.html  nimg = "5" %}
+
 ` ` Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
 
 ###### отменяет действие align-left и align-right
