--- a/404.md
+++ b/404.md
@@ -4,4 +4,7 @@ main: false
 submenu: false
 layout: uni
 ---
+
 <h1 class="uk-heading-xlarge">404</h1>
+
+Перейти на [главную страницу]({% link index.md %})
