--- a/2.0_access.md
+++ b/2.0_access.md
@@ -14,7 +14,7 @@ submenu: true
 - замкнутого пространства  
 ***ЗАКАЗАТЬ***
 
-` ` Мы являемся специалистами в области проектирования безопасных систем доступа в самые труднодоступные места.  
+Мы являемся специалистами в области проектирования безопасных систем доступа в самые труднодоступные места.  
 Ликвидация рисков для жизни и здоровья Ваших сотрудников на высоте является первостепенной задачей.   
 Для предоставления доступа Вашему специалисту в труднодоступное место, мы разработаем и установим безопасный путь.   
 Возможна установка временного или постоянного, безопасного пути на вашем объекте.
@@ -34,10 +34,10 @@ submenu: true
  
 ### **Безопасность.**
 
-` ` Обладая многолетним практическим опытом, разрабатываем решения по обеспечению безопасности на высоте, применяя новые производственные технологии, методологии и инновации в области СИЗ, чтобы помочь операторам и специалистам по безопасности ориентироваться и производить практические шаги для управления опасностями, возникающими при работе на высоте.
+Обладая многолетним практическим опытом, разрабатываем решения по обеспечению безопасности на высоте, применяя новые производственные технологии, методологии и инновации в области СИЗ, чтобы помочь операторам и специалистам по безопасности ориентироваться и производить практические шаги для управления опасностями, возникающими при работе на высоте.
 
 ### **Безопасность Высоты и оценка рисков.**
 
-` ` Команда компании уделяет большое внимание вопросам безопасности и оценки рисков, и благодаря тому, что сотрудники активно работают в этих условиях, мы обладаем практическими знаниями и глубоким пониманием характеристик, опасностей и законодательных требований, необходимых для безопасной эксплуатации. Эта приверженность безопасности и опыт эксплуатации позволяют компании предоставлять экспертные консультационные услуги в условиях повышенного риска.
+Команда компании уделяет большое внимание вопросам безопасности и оценки рисков, и благодаря тому, что сотрудники активно работают в этих условиях, мы обладаем практическими знаниями и глубоким пониманием характеристик, опасностей и законодательных требований, необходимых для безопасной эксплуатации. Эта приверженность безопасности и опыт эксплуатации позволяют компании предоставлять экспертные консультационные услуги в условиях повышенного риска.
 
 ***Мы гибки и быстры, и мы можем проектировать решения для сложных ситуаций.***
