--- a/2.0_access.md
+++ b/2.0_access.md
@@ -7,7 +7,7 @@ submenu: true
 ---
 
 ### **Нужен доступ?**  
-#### Высота, стесненные условия, труднодоступные зоны все это не имеет значения. **Мы обеспечим Вам доступ!**
+##### Высота, стесненные условия, труднодоступные зоны все это не имеет значения. **Мы обеспечим Вам доступ!**
 ### ***Обеспечим доступ в любую труднодоступную зону специалистам для обследования:***  
 - кровля  
 - фасад  
