--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -37,7 +37,7 @@ submenu: true
 
 ###### отменяет действие align-left и align-right
 ### **3. Качество монтажа кровельных материалов.**  
-![](/img/0/1.2.3.6000.jpg)  
+![](/img/0/1.2.3.6.jpg)  
 
 ` ` Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
@@ -77,6 +77,7 @@ submenu: true
 
 
 ### **Что вам даст обследование кровли.**
+![](/img/0/1.2.8.jpg){:class="uk-align-left uk-width-1-3"}
 1. Достоверную информацию, на основании которой вы будете принимать решения.  
 2. Ценную информацию для формирования технического задания.  
 3. На основании полученной информации можно планировать дальнейшую работу.   
@@ -86,9 +87,10 @@ submenu: true
 7. Общую картину повреждений, недоделок или качества выполненных работ.  
 8. Понимание фронта работ и необходимости ремонта, восстановления или замене той или иной детали, конструкции или покрытия  .   
 9. Полученная информация поможет сэкономить ваш бюджет.  
-
+###### отменяет действие align-left и align-right
 
 ### **Какие документы получаем по окончанию обследования.**
+![](/img/0/1.2.9.jpg){:class="uk-align-left uk-width-1-3"}
 __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__ который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.
 
 Техническое заключение составляется согласно __ГОСТ 31937-2011.__    
@@ -97,6 +99,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * К заключению прилагаются рекомендации по устранению выявленных дефектов.  
 * На бумажном носителе в 2-х (двух) экземплярах.  
 * В электронном виде (сканировании копия в формате PDF).  
+###### отменяет действие align-left и align-right
 
 **техническое заключение формируется на основании технического задания.**
 
