--- a/1.3_.md
+++ b/1.3_.md
@@ -5,6 +5,7 @@ sortid: 1.3
 submenu: true
 ---
 
+{% include el-slider.html  nimg = "5" %} 
 
 ### Высота, стесненные условия, труднодоступные зоны все это не имеет значения.   
 
