--- a/1.4_Tech_conclus.md
+++ b/1.4_Tech_conclus.md
@@ -11,10 +11,10 @@ submenu: true
 _По результатам обследования составляется отчет о техническом состоянии._  
 
 В соответствии с __ГОСТ__ {% include el-pdf.html text="31937-2011" name="7.1.4.1. GOST_31937-2011.pdf" %} "Здания и сооружения". Правила обследования и мониторинга технического состояния" существует 4 категории технического состояния строительных конструкций:
-* - Нормативное техническое состояние.
-* - Работоспособное техническое состояние.
-* - Ограниченно-работоспособное техническое состояние.
-* - Аварийное состояние.
+- Нормативное техническое состояние.
+- Работоспособное техническое состояние.
+- Ограниченно-работоспособное техническое состояние.
+- Аварийное состояние.
 
 Отчет технического обследования состоит из текстовой части, фотографий, графического материала и приложений, и содержит следующие разделы:
 
